# seed

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCKER_NETWORK_MIGRATION.md  Makefile  PROJECT_STRUCTURE.md  ZABBIX_JSON_TEMPLATE.md  ZABBIX_WEBHOOK_TROUBLESHOOTING.md  alertmanager-integration.py  architecture_v61.md  corporate-to-seed-proxy.py  debug_prometheus.md  demo_requests.md  docker-compose.yml  docker-daemon.json  fix-docker-tmp.sh  mermaid_diagram.md  mermaid_simple.md  message-editing-patch.md  network_access_requirements.md  presentation_plan.md  pyproject.toml  requirements.txt  run-sber-integration.sh  sberdevices-alertmanager-config.yml  sberdevices-integration.env  seed-agent.py  seed.env  services.sh  setup-docker-config.sh  simple-fix.md  test  test-sber-integration.py  test-zabbix-webhook.py  troubleshooting_prometheus.md  zabbix-script-adapted.py  zabbix-to-seed.py  zabbix-webhook-5.4.py  zabbix-webhook-enriched.py  (+1 more)
.claude/: settings.local.json
core/: alert_processor.py  config.py  notify.py
v1/: .env.example  alert_listener.py  requirements.txt  seed.env  send_alert.py  test_mattermost.py  ui_ff.py  ui_format.py
v2/: DEMO.md  Dockerfile  PRODUCTION.md  README.md  README_v2.md  app.py  docker-compose.yml  install_native.sh  install_service.sh  parse_collscan.sh  requirements.txt  seed-api.service  seed-worker.service  seed.env  setup_offline_docker.sh  start_telegraf.sh  telegraf_mongodb_collscan.conf  test_alert.py  test_integration.py  test_manual.py  worker.py
v3/: .dockerignore  Dockerfile  Dockerfile.allinone  Dockerfile.offline  (+31 more)
(+152 files in other folders)
